[workspace]
members = [
    '2018/day25',
    '2018/day24',
    '2018/day23',
    '2018/day22',
    '2018/day21',
    '2018/day20',
    '2018/day19',
    '2018/day18',
    '2018/day17',
    '2018/day16',
    '2018/day15',
    '2018/day14',
    '2018/day13',
    '2018/day12',
    '2018/day11',
    '2018/day10',
    '2018/day09',
    '2018/day08',
    '2018/day07',
    '2018/day06',
    '2018/day05',
    '2018/day04',
    '2018/day03',
    '2018/day02',
    '2018/day01',
    'test-log',
]
