[package]
name = "2019day07"
version = "0.1.0"
authors = ["frank <frank.049@hotmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.6"
env_logger = "0.6.0"
permutohedron = "0.2.4"
rayon = "1.2.1"
aoc = { path = "../../aoc/" }
intcode = { path = "../intcode/" }

[dev-dependencies]
test-log = { path = "../../test-log/" }
