[package]
name = "2019day16"
version = "0.1.0"
authors = ["frank <frank.049@hotmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.6"
env_logger = "0.6.0"
aoc = { path = "../../aoc/" }
intcode = { path = "../intcode/" }
rayon = "1.2.1"

[dev-dependencies]
test-log = { path = "../../test-log/" }
